--- a/css/bear.css
+++ b/css/bear.css
@@ -9,6 +9,11 @@ html {
 }
 
 /* Write your solution here */
-@media screen and (max-width: 1196px) {
-  #leftsidebar {width: 800px; float: left;}
-}
+@media only screen and (max-width: 600px) {
+    .wrapper { width: 600px; }
+    .column {
+        width: 32%;
+        float: left;
+        margin-left: 2%;
+        margin-bottom: 0;
+    }
