--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -12,6 +12,6 @@ html {
 @media only screen and (max-width: 1196px) {
     .wrapper { width: 800px; }
     .column {
-        float: left;
+        float: right;
     }
 }
